--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "badminton-bot",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "src/server.ts",
   "scripts": {
-    "start:dev": "nodemon src/server.js",
+    "start:dev": "nodemon",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,18 +13,19 @@
   "description": "",
   "dependencies": {
     "@line/bot-sdk": "^9.2.2",
-    "axios": "^1.7.2",
-    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "openai": "^4.52.7"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
-    "eslint": "^9.7.0",
-    "eslint-plugin-react": "^7.35.0",
-    "globals": "^15.8.0"
+    "@types/eslint__js": "^8.42.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.12",
+    "eslint": "^8.57.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.17.0"
   }
 }
