--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "src/server.js",
+      "src": "dist/server.js",
       "use": "@vercel/node",
       "config": {
         "includeFiles": ["src/**/*"]
