--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "badminton-bot",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "main": "src/server.ts",
   "scripts": {
     "start:dev": "nodemon",
     "build": "tsc",
